--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,19 @@
 </head>
 <body>
     <p>Welcome to the chat app</p>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript">
+        let socket = io();
+
+        socket.on('connect', () => {
+            console.log('Conneted to server.');
+        });
+
+        socket.on('disconnect', () => {
+            console.log('Disconneted from server.');
+        });
+
+    </script>
 </body>
 </html>
