--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,7 @@
     <p>Welcome to the chat app</p>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript">
-        let socket = io();
+    <script type="text/javascript" src="/js/index.js"></script>
 
-        socket.on('connect', () => {
-            console.log('Conneted to server.');
-        });
-
-        socket.on('disconnect', () => {
-            console.log('Disconneted from server.');
-        });
-
-    </script>
 </body>
 </html>
