--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
 <body>
     <p>Welcome to the chat app</p>
 
+    <form id="message-form">
+        <input type="text" name="message" placeholder="message">
+        <button type="submit" id="submit-btn">Submit</button>
+    </form>
+
+    <button type="button" id="send-location">Send Location</button>
+
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/js/index.js"></script>
 
